[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prediction-markets-client"
version = "0.1.0"
description = "Polymarket Gamma & CLOB API clients with rate-limiting and simulation demo"
readme = "README.md"
authors = [{ name = "Ryder Rhoads" }]
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.8"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["clients*"]
